Fix pattern indicators on game board on Firefox
On Firefox (and maybe other browsers), the two hollow circles
indicating phase pairs, the filed circle indicating full moon pairs, and
the lines indicating lunar cycles were not displayed correctly.

This is because we passed in unitless values to CSS properties like
`stroke-width` or `r`. Firefox seems to accept a literal unitless value
(and interprets it as in `px`) but rejects a unitless `calc(...)`.

--- a/src/frontend/lunar.css
+++ b/src/frontend/lunar.css
@@ -564,8 +564,8 @@ svg#edges > line.lunar-cycle-symbol {
 rect.slot-indicator {
     fill: none;
     stroke: white;
-    stroke-width: 3;
-    stroke-dasharray: 8 4;
+    stroke-width: 3px;
+    stroke-dasharray: 8px 4px;
     height: 100%;
     width: 100%;
 }
